<resources>
    <string name="app_name">E_learning</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="AR">AR</string>
    <string name="FR">FR</string>
    <string name="Professeur">Professeur</string>
    <string name="Etudiant">Etudiant</string>
    <string name="Espace_Etudiant">Espace Etudiant</string>
    <string name="ressources">Ressources</string>
    <string name="espace_etudiant">ESPACE ETUDIANT</string>
    <string name="assister_la_seance">ASSISTER LA SEANCE</string>
    <string name="back">back</string>
    <string name="student_hot">student_hot</string>
    <string name="cne">CNE</string>
    <string name="cin">CIN</string>
    <string name="valider">Valider</string>
    <string name="espace_professeur">ESPACE PROFESSEUR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mot_de_pass">Mot de pass</string>
    <string name="modules">Modules</string>
    <string name="creer_une_seance">CREER UNE SEANCE</string>
    <string name="gerer_mes_seance">GERER MES SEANCE</string>
    <string name="m1_seance_1">M1: SEANCE 1</string>
    <string name="contenu">Contenu</string>
    <string name="discussion">Discussion</string>
    <string name="module_1">Module 1</string>
    <string name="REF">REF</string>
    <string name="module">module</string>
    <string name="creer_seance">creer seance</string>
    <string name="listes_des_sances">Liste des seances</string>
    <string name="Question">Question</string>
    <string name="reponses">Reponses</string>
    <string name="ajouter">Ajouter</string>
    <string name="creer_quiz">Creer quiz</string>
    <string name="listes_des_s_ances">Liste Des Filiere</string>
    <string name="liste_des_filieres">liste Des Filieres</string>
    <string name="connexion">CONNEXION</string>
    <string name="espace_tudiant">Espace Étudiant</string>
    <string name="espace_enseignant">Espace Enseignant</string>
    <string name="liste_des_modules">Liste des Modules</string>
    <string name="title_activity_prof_create_seance">ProfCreateSeance</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="quiz">QUIZ</string>
    <string name="creer_une_quiz">CREER UN QUIZ</string>
    <string name="ajouter_une_question">Ajouter une question...</string>
    <string name="ajouter_les_reponses">Ajouter les réponses</string>
    <string name="ajouter_description">Ajouter une description...</string>
    <string name="recorder_audio_ici">Recorder un audio ICI...</string>
    <string name="ecrire_un_message">Ecrire un message</string>
    <string name="envoyer_le_message">envoyer le message</string>
    <string name="nom_utilisatuer">Nom et Prenom</string>
    <string name="contenu_de_message">contenu de message</string>
    <string name="moi">Moi</string>
    <string name="date_et_temp">Date et temp</string>
    <string name="accuil_backgrouond">Accuil backgrouond</string>
    <string name="e_learning">E-learning</string>
    <string name="fac_name">FACULTE POLYDSCIPLINAIRE DE TAZA</string>
    <string name="univ_name">UNIVERSITE SIDI MOHAMED BEN ABDELLAH</string>
    <string name="cree_le">Créé le : </string>
    <string name="ajouter_des_fichier">Ajouter des fichier</string>
    <string name="attach_file">attach_file</string>
    <string name="date_du_cour">Date du cour</string>
</resources>
