<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EtudiantLoginActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_118"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/GoBackIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:onClick="goback"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Espace_Etudiant"
                android:textColor="@color/greencolor"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/img"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/student_hot"
                android:src="@drawable/ic_school_black_24dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/cne"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/cne"
            android:background="@drawable/btn"
            android:hint="@string/cne"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/cin"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:hint="@string/cin"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:background="@drawable/btn"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="@string/cin" />

        <Button
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/joinbtn"
            android:onClick="onClickValider"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:textColor="@color/whitecolor" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>