<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingHorizontal="15dp"
            android:text="@string/nom_utilisatuer"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingHorizontal="10dp"
            android:gravity="center_vertical"
            android:text="@string/contenu_de_message"
            android:textColor="@android:color/primary_text_light"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/date_et_temp"
            android:textColor="@color/green"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>