<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_welcome"
        android:paddingTop="100dp"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fr_button"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/my_buttons"
            android:text="@string/FR"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/videoView"
            app:layout_constraintEnd_toStartOf="@+id/ar_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ar_button"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/my_buttons"
            android:text="@string/AR"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/videoView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fr_button"
            app:layout_constraintTop_toTopOf="parent" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="368dp"
            android:layout_height="275dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fr_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/prof_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_11"
        android:onClick="onClickProf"
        android:text="@string/Professeur"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etud_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/etud_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rectangle_11"
        android:onClick="onClickEtudiant"
        android:text="@string/Etudiant"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>